<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_nav_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_all_records"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_all_records" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/nav_statistics" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/nav_help" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/nav_about" />

</menu>